# Kompajleri-domashna-3

./: README.md
domashna3/: CMakeLists.txt
domashna3/include/: head.h
domashna3/src/: prva.c
